# message-rust

./: .env  .gitignore  Cargo.toml  README.md  start_mysql.sh  start_redis.sh
.github/workflows/: rust.yml
migrations/2020-03-30-073757_create_message/: down.sql  up.sql
src/: chat_model.rs  chat_route.rs  chat_server.rs  main.rs
src/api/: error.rs  message.rs  mod.rs  models.rs  response.rs  route.rs  user.rs
src/cache/: error.rs  mod.rs  token.rs
src/chat/: mod.rs  model.rs  route.rs  server.rs
src/db/: error.rs  friendship.rs  mod.rs  schema.rs  user.rs
