[package]
name = "rust_chat"
version = "0.1.0"
authors = ["yeyongping <burnedfrog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-web-actors = "2.0.0"
env_logger = "0.7.1"
rand = "0.7.3"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
serde_repr = "0.1.5"

diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"]}
r2d2 = "0.8.8"
dotenv = "0.15.0"
chrono = "0.4.11"

redis = { version = "0.15.1", features = ["r2d2"]}
r2d2_redis = "0.13.0"